--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,7 +21,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
@@ -31,8 +31,9 @@ dependencies {
     compile 'com.google.firebase:firebase-auth:9.4.0'
     compile 'com.google.firebase:firebase-storage:9.4.0'
     // https://mvnrepository.com/artifact/net.sf.opencsv/opencsv
-    compile group: 'net.sf.opencsv', name: 'opencsv', version: '2.3'
+    compile 'net.sf.opencsv:opencsv:2.3'
     testCompile 'junit:junit:4.12'
+    compile files('libs/achartengine-1.2.0.jar')
 }
 
 apply plugin: 'com.google.gms.google-services'
